Add RTCPeerConnection.connectionState and onconnectionstatechange.

Intent to Implement and Ship:
https://groups.google.com/a/chromium.org/d/msg/blink-dev/lxHPNYoaEU8/0JFwF0ipCQAJ

Bug: chromium:823144
Change-Id: Ia849f44d1c8898da0fcb8341c8ff56de4de2d815
Reviewed-on: https://chromium-review.googlesource.com/c/1292560
Commit-Queue: Jonas Olsson <jonasolsson@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Reviewed-by: Guido Urdaneta <guidou@chromium.org>
Reviewed-by: Henrik Boström <hbos@chromium.org>
Cr-Commit-Position: refs/heads/master@{#610603}
Former-commit-id: 93094c4962f94a897a6601a75724e4b2db329fae